[package]
name = "bevy_viewcube"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15", features = ["bevy_picking"] }
bevy_picking = { version = "0.15" }
bevy_panorbit_camera = { version = "0.23"}
